--- a/DJ1/myproject/myapp3/templates/myapp3/about.html
+++ b/DJ1/myproject/myapp3/templates/myapp3/about.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+
+{% extends 'myapp3/base.html' %}
+
+{% block title %}Обо мне{% endblock %}
+{% block content %}
+    <h1>Обо мне</h1>
+    <p>Меня зовут Владимир и я пишу программы с 15 лет.</p>
+{% endblock %}
