--- a/DJ1/myproject/myapp3/templates/myapp3/index.html
+++ b/DJ1/myproject/myapp3/templates/myapp3/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Мой сайт{% endblock %}
+
+{% block content %}
+    <h1>Приветствую на моем сайте</h1>
+    <p>Это главная страница</p>
+{% endblock %}
