--- a/DJ1/myproject/myapp3/templates/myapp3/post_full.html
+++ b/DJ1/myproject/myapp3/templates/myapp3/post_full.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}{{ post.title }}{% endblock %}
+
+{% block content %}
+    <h3>{{ post.title }}</h3>
+    <p>{{ post.content }}</p>
+{% endblock %}
