--- a/DJ1/myproject/myapp3/templates/myapp3/templ_for.html
+++ b/DJ1/myproject/myapp3/templates/myapp3/templ_for.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Шаблон ветвление</title>
+    <title>Шаблон циклов</title>
 </head>
 <body>
-    {% if message %}
-        <p>Вам доступно сообщение: <br> {{ message }}</p>
-    {% endif %}
+    <h2>Элементы списка</h2>
+        <ul>
+        {% for item in my_list %}
+            <li>{{ item }}</li>
+        {% endfor %}
+        </ul>
+    <h2>Ключи и значения словаря</h2>
+        <table>
+            {% for key, value in my_dict.items %}
+            <tr><td>{{ key }}</td><td>{{ value }}</td></tr>
+        {% endfor %}
+</table>
 
-    <p>К прочтению предлагается {{ number }}
-        {% if number == 1 %}
-            пост
-        {% elif number >= 2 and number <= 4 %}
-            поста
-        {% else %}
-            постов
-        {% endif %}
-    </p>
 </body>
 </html>
