--- a/GB_Django_HW/myproject/gb_app3/templates/gb_app3/products_list.html
+++ b/GB_Django_HW/myproject/gb_app3/templates/gb_app3/products_list.html
@@ -18,5 +18,6 @@
     <a href="{% url 'user_products' user.id 7 %}"> за последнюю неделю </a><br><br>
     <a href="{% url 'user_products' user.id 30 %}"> за последний месяц </a><br><br>
     <a href="{% url 'user_products' user.id 365 %}"> за последний год </a><br><br>
-    <a href="{% url 'user_products' user.id 0 %}"> за все время </a><br><br>
+    <a href="{% url 'user_products' user.id 0 %}"> за все время </a><br><br><br>
+    <a href="{% url 'users1' %}"> К списку пользователей </a><br><br>
 {% endblock %}
