--- a/GB_Django_HW/myproject/gb_app4/templates/gb_app4/all_products.html
+++ b/GB_Django_HW/myproject/gb_app4/templates/gb_app4/all_products.html
@@ -15,7 +15,8 @@
             </tr>
             {% endfor %}
         </table>
-
+        <br><br><br>
+        <a href="{% url 'index' %}"> Начальное меню </a>
     <style>
     img {
         height: auto;
