--- a/GB_Django_HW/myproject/gb_app3/templates/gb_app3/users.html
+++ b/GB_Django_HW/myproject/gb_app3/templates/gb_app3/users.html
@@ -10,6 +10,9 @@
             <td><a href="{% url 'user_products' us.id 0 %}">{{ us }}</a>
         </tr>
         {% endfor %}
+
     </table>
+    <br><br>
+    <a href="{% url 'index' %}"> Начальное меню </a>
 
 {% endblock %}
